# mescomptes

./: .gitignore  README.md  assign_categories.py  get_month_debit.py  load_pdf.py  manage.py  pyproject.toml
comptes/: settings.py  urls.py  wsgi.py
mescomptes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mescomptes/migrations/: 0001_initial.py  0001_squashed_0002_auto_20180829_0204.py  0002_auto_20180903_1611.py  0002_devise.py  0003_alter_categorie_id_alter_compte_id_alter_devise_id_and_more.py  0003_compte_devise.py  0004_categorie_regex.py  0004_devise_symbol.py  0005_auto_20180825_1845.py  0005_regex_remove_categorie_regex_categorie_regexs.py  0006_auto_20180825_2107.py  0007_auto_20180825_2115.py  0008_auto_20180825_2351.py  0009_auto_20180825_2353.py  0010_auto_20180826_0020.py  0011_auto_20180826_0020.py
mescomptes/templates/mescomptes/: compte.html  set_categories.html
