[project]
name = "mescomptes"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yann Sionneau", email = "yann@sionneau.net"},
]
dependencies = ["django>=5.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
